src/unifier/sdfparser/SdfParser.java
// $ANTLR 3.0.1 D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g 2008-05-14 19:22:04

	package unifier.sdfparser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class SdfParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEFINITION", "MODULE", "IMPORTS", "EXPORTS", "HIDDENS", "CONTEXTFREE", "SYNTAX", "PRIORITIES", "STARTSYMBOLS", "SORTS", "MODULENAME", "PRIORITY", "SORT", "GROUP", "COMPOUNDSYMBOL", "MARKEDSYMBOL", "PARAMETERIZEDSYMBOL", "LIST", "ORIGIN", "SEPARATOR", "MULTIPLICITY", "PRODUCTION", "LEFT", "RIGHT", "ATTRIBUTE", "SLASH", "ID", "GREATER", "STAR", "PLUS", "QUESTION", "STRING", "LPAREN", "RPAREN", "LDOUBLEBRACKET", "COMMA", "RDOUBLEBRACKET", "LBRACE", "RBRACE", "IMP", "DIGIT", "SMALLLETTER", "CAPITALLETTER", "LETTER", "MINUS", "UNDERSCORE", "LBRACKET", "RBRACKET", "BOLD_IMP", "WHITESPACE", "SL_COMMENT"
    };
    public static final int STAR=32;
    public static final int LETTER=47;
    public static final int LBRACE=41;
    public static final int ATTRIBUTE=28;
    public static final int CONTEXTFREE=9;
    public static final int SEPARATOR=23;
    public static final int ID=30;
    public static final int MARKEDSYMBOL=19;
    public static final int EOF=-1;
    public static final int SORTS=13;
    public static final int LPAREN=36;
    public static final int LBRACKET=50;
    public static final int SYNTAX=10;
    public static final int MULTIPLICITY=24;
    public static final int RPAREN=37;
    public static final int SLASH=29;
    public static final int GREATER=31;
    public static final int EXPORTS=7;
    public static final int COMMA=39;
    public static final int LEFT=26;
    public static final int ORIGIN=22;
    public static final int PRODUCTION=25;
    public static final int DEFINITION=4;
    public static final int IMP=43;
    public static final int PLUS=33;
    public static final int DIGIT=44;
    public static final int RBRACKET=51;
    public static final int COMPOUNDSYMBOL=18;
    public static final int STARTSYMBOLS=12;
    public static final int SMALLLETTER=45;
    public static final int RBRACE=42;
    public static final int CAPITALLETTER=46;
    public static final int WHITESPACE=53;
    public static final int SORT=16;
    public static final int UNDERSCORE=49;
    public static final int RIGHT=27;
    public static final int MINUS=48;
    public static final int MODULE=5;
    public static final int LIST=21;
    public static final int MODULENAME=14;
    public static final int PARAMETERIZEDSYMBOL=20;
    public static final int GROUP=17;
    public static final int PRIORITY=15;
    public static final int QUESTION=34;
    public static final int SL_COMMENT=54;
    public static final int BOLD_IMP=52;
    public static final int LDOUBLEBRACKET=38;
    public static final int HIDDENS=8;
    public static final int RDOUBLEBRACKET=40;
    public static final int IMPORTS=6;
    public static final int PRIORITIES=11;
    public static final int STRING=35;

        public SdfParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g"; }


    public static class module_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start module
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:46:1: module : MODULE moduleName ( impSection )* ( section )* EOF ;
    public final module_return module() throws RecognitionException {
        module_return retval = new module_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token MODULE1=null;
        Token EOF5=null;
        moduleName_return moduleName2 = null;

        impSection_return impSection3 = null;

        section_return section4 = null;


        CommonTree MODULE1_tree=null;
        CommonTree EOF5_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:2: ( MODULE moduleName ( impSection )* ( section )* EOF )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:4: MODULE moduleName ( impSection )* ( section )* EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            MODULE1=(Token)input.LT(1);
            match(input,MODULE,FOLLOW_MODULE_in_module256); 
            MODULE1_tree = (CommonTree)adaptor.create(MODULE1);
            root_0 = (CommonTree)adaptor.becomeRoot(MODULE1_tree, root_0);

            pushFollow(FOLLOW_moduleName_in_module259);
            moduleName2=moduleName();
            _fsp--;

            adaptor.addChild(root_0, moduleName2.getTree());
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:23: ( impSection )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==IMPORTS) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:23: impSection
            	    {
            	    pushFollow(FOLLOW_impSection_in_module261);
            	    impSection3=impSection();
            	    _fsp--;

            	    adaptor.addChild(root_0, impSection3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:35: ( section )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=EXPORTS && LA2_0<=HIDDENS)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:47:35: section
            	    {
            	    pushFollow(FOLLOW_section_in_module264);
            	    section4=section();
            	    _fsp--;

            	    adaptor.addChild(root_0, section4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            EOF5=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_module267); 
            EOF5_tree = (CommonTree)adaptor.create(EOF5);
            adaptor.addChild(root_0, EOF5_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end module

    public static class moduleName_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start moduleName
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:50:1: moduleName : mid= moduleId -> ^( MODULENAME $mid) ;
    public final moduleName_return moduleName() throws RecognitionException {
        moduleName_return retval = new moduleName_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        moduleId_return mid = null;


        RewriteRuleSubtreeStream stream_moduleId=new RewriteRuleSubtreeStream(adaptor,"rule moduleId");
        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:51:2: (mid= moduleId -> ^( MODULENAME $mid) )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:51:4: mid= moduleId
            {
            pushFollow(FOLLOW_moduleId_in_moduleName280);
            mid=moduleId();
            _fsp--;

            stream_moduleId.add(mid.getTree());

            // AST REWRITE
            // elements: mid
            // token labels: 
            // rule labels: retval, mid
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_mid=new RewriteRuleSubtreeStream(adaptor,"token mid",mid!=null?mid.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 51:17: -> ^( MODULENAME $mid)
            {
                // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:51:20: ^( MODULENAME $mid)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(MODULENAME, "MODULENAME"), root_1);

                adaptor.addChild(root_1, stream_mid.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end moduleName

    public static class moduleId_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start moduleId
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:54:1: moduleId : moduleWord ( SLASH moduleWord )* ;
    public final moduleId_return moduleId() throws RecognitionException {
        moduleId_return retval = new moduleId_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SLASH7=null;
        moduleWord_return moduleWord6 = null;

        moduleWord_return moduleWord8 = null;


        CommonTree SLASH7_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:55:2: ( moduleWord ( SLASH moduleWord )* )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:55:4: moduleWord ( SLASH moduleWord )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_moduleWord_in_moduleId302);
            moduleWord6=moduleWord();
            _fsp--;

            adaptor.addChild(root_0, moduleWord6.getTree());
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:55:15: ( SLASH moduleWord )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==SLASH) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:55:16: SLASH moduleWord
            	    {
            	    SLASH7=(Token)input.LT(1);
            	    match(input,SLASH,FOLLOW_SLASH_in_moduleId305); 
            	    pushFollow(FOLLOW_moduleWord_in_moduleId308);
            	    moduleWord8=moduleWord();
            	    _fsp--;

            	    adaptor.addChild(root_0, moduleWord8.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end moduleId

    public static class moduleWord_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start moduleWord
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:58:1: moduleWord : ID ;
    public final moduleWord_return moduleWord() throws RecognitionException {
        moduleWord_return retval = new moduleWord_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID9=null;

        CommonTree ID9_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:59:2: ( ID )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:59:4: ID
            {
            root_0 = (CommonTree)adaptor.nil();

            ID9=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_moduleWord321); 
            ID9_tree = (CommonTree)adaptor.create(ID9);
            adaptor.addChild(root_0, ID9_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end moduleWord

    public static class impSection_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start impSection
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:62:1: impSection : IMPORTS ( imports )* ;
    public final impSection_return impSection() throws RecognitionException {
        impSection_return retval = new impSection_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IMPORTS10=null;
        imports_return imports11 = null;


        CommonTree IMPORTS10_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:63:2: ( IMPORTS ( imports )* )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:63:4: IMPORTS ( imports )*
            {
            root_0 = (CommonTree)adaptor.nil();

            IMPORTS10=(Token)input.LT(1);
            match(input,IMPORTS,FOLLOW_IMPORTS_in_impSection333); 
            IMPORTS10_tree = (CommonTree)adaptor.create(IMPORTS10);
            root_0 = (CommonTree)adaptor.becomeRoot(IMPORTS10_tree, root_0);

            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:63:13: ( imports )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:63:13: imports
            	    {
            	    pushFollow(FOLLOW_imports_in_impSection336);
            	    imports11=imports();
            	    _fsp--;

            	    adaptor.addChild(root_0, imports11.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end impSection

    public static class imports_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start imports
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:66:1: imports : moduleName ;
    public final imports_return imports() throws RecognitionException {
        imports_return retval = new imports_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        moduleName_return moduleName12 = null;



        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:67:2: ( moduleName )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:67:4: moduleName
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_moduleName_in_imports348);
            moduleName12=moduleName();
            _fsp--;

            adaptor.addChild(root_0, moduleName12.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end imports

    public static class section_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start section
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:70:1: section : ( EXPORTS | HIDDENS ) ( sdfGrammar )+ ;
    public final section_return section() throws RecognitionException {
        section_return retval = new section_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EXPORTS13=null;
        Token HIDDENS14=null;
        sdfGrammar_return sdfGrammar15 = null;


        CommonTree EXPORTS13_tree=null;
        CommonTree HIDDENS14_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:2: ( ( EXPORTS | HIDDENS ) ( sdfGrammar )+ )
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:4: ( EXPORTS | HIDDENS ) ( sdfGrammar )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:4: ( EXPORTS | HIDDENS )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==EXPORTS) ) {
                alt5=1;
            }
            else if ( (LA5_0==HIDDENS) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("71:4: ( EXPORTS | HIDDENS )", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:5: EXPORTS
                    {
                    EXPORTS13=(Token)input.LT(1);
                    match(input,EXPORTS,FOLLOW_EXPORTS_in_section362); 
                    EXPORTS13_tree = (CommonTree)adaptor.create(EXPORTS13);
                    root_0 = (CommonTree)adaptor.becomeRoot(EXPORTS13_tree, root_0);


                    }
                    break;
                case 2 :
                    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:16: HIDDENS
                    {
                    HIDDENS14=(Token)input.LT(1);
                    match(input,HIDDENS,FOLLOW_HIDDENS_in_section367); 
                    HIDDENS14_tree = (CommonTree)adaptor.create(HIDDENS14);
                    root_0 = (CommonTree)adaptor.becomeRoot(HIDDENS14_tree, root_0);


                    }
                    break;

            }

            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:26: ( sdfGrammar )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==CONTEXTFREE||LA6_0==SORTS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:71:26: sdfGrammar
            	    {
            	    pushFollow(FOLLOW_sdfGrammar_in_section371);
            	    sdfGrammar15=sdfGrammar();
            	    _fsp--;

            	    adaptor.addChild(root_0, sdfGrammar15.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end section

    public static class sdfGrammar_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start sdfGrammar
    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:74:1: sdfGrammar : ( CONTEXTFREE ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* ) | SORTS ( symbol )* );
    public final sdfGrammar_return sdfGrammar() throws RecognitionException {
        sdfGrammar_return retval = new sdfGrammar_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token CONTEXTFREE16=null;
        Token SYNTAX17=null;
        Token PRIORITIES19=null;
        Token STARTSYMBOLS21=null;
        Token SORTS23=null;
        production_return production18 = null;

        priority_return priority20 = null;

        symbol_return symbol22 = null;

        symbol_return symbol24 = null;


        CommonTree CONTEXTFREE16_tree=null;
        CommonTree SYNTAX17_tree=null;
        CommonTree PRIORITIES19_tree=null;
        CommonTree STARTSYMBOLS21_tree=null;
        CommonTree SORTS23_tree=null;

        try {
            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:2: ( CONTEXTFREE ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* ) | SORTS ( symbol )* )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==CONTEXTFREE) ) {
                alt12=1;
            }
            else if ( (LA12_0==SORTS) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("74:1: sdfGrammar : ( CONTEXTFREE ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* ) | SORTS ( symbol )* );", 12, 0, input);

                throw nvae;
            }
            switch (alt12) {
                case 1 :
                    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:4: CONTEXTFREE ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* )
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    CONTEXTFREE16=(Token)input.LT(1);
                    match(input,CONTEXTFREE,FOLLOW_CONTEXTFREE_in_sdfGrammar383); 
                    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:17: ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* )
                    int alt10=3;
                    switch ( input.LA(1) ) {
                    case SYNTAX:
                        {
                        alt10=1;
                        }
                        break;
                    case PRIORITIES:
                        {
                        alt10=2;
                        }
                        break;
                    case STARTSYMBOLS:
                        {
                        alt10=3;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("75:17: ( SYNTAX ( production )* | PRIORITIES ( priority )* | STARTSYMBOLS ( symbol )* )", 10, 0, input);

                        throw nvae;
                    }

                    switch (alt10) {
                        case 1 :
                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:18: SYNTAX ( production )*
                            {
                            SYNTAX17=(Token)input.LT(1);
                            match(input,SYNTAX,FOLLOW_SYNTAX_in_sdfGrammar387); 
                            SYNTAX17_tree = (CommonTree)adaptor.create(SYNTAX17);
                            root_0 = (CommonTree)adaptor.becomeRoot(SYNTAX17_tree, root_0);

                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:26: ( production )*
                            loop7:
                            do {
                                int alt7=2;
                                int LA7_0 = input.LA(1);

                                if ( (LA7_0==ID||(LA7_0>=STRING && LA7_0<=LPAREN)||LA7_0==LBRACE||LA7_0==IMP) ) {
                                    alt7=1;
                                }


                                switch (alt7) {
                            	case 1 :
                            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:26: production
                            	    {
                            	    pushFollow(FOLLOW_production_in_sdfGrammar390);
                            	    production18=production();
                            	    _fsp--;

                            	    adaptor.addChild(root_0, production18.getTree());

                            	    }
                            	    break;

                            	default :
                            	    break loop7;
                                }
                            } while (true);


                            }
                            break;
                        case 2 :
                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:40: PRIORITIES ( priority )*
                            {
                            PRIORITIES19=(Token)input.LT(1);
                            match(input,PRIORITIES,FOLLOW_PRIORITIES_in_sdfGrammar395); 
                            PRIORITIES19_tree = (CommonTree)adaptor.create(PRIORITIES19);
                            root_0 = (CommonTree)adaptor.becomeRoot(PRIORITIES19_tree, root_0);

                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:52: ( priority )*
                            loop8:
                            do {
                                int alt8=2;
                                int LA8_0 = input.LA(1);

                                if ( (LA8_0==ID||(LA8_0>=STRING && LA8_0<=LPAREN)||LA8_0==LBRACE||LA8_0==IMP) ) {
                                    alt8=1;
                                }


                                switch (alt8) {
                            	case 1 :
                            	    // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:52: priority
                            	    {
                            	    pushFollow(FOLLOW_priority_in_sdfGrammar398);
                            	    priority20=priority();
                            	    _fsp--;

                            	    adaptor.addChild(root_0, priority20.getTree());

                            	    }
                            	    break;

                            	default :
                            	    break loop8;
                                }
                            } while (true);


                            }
                            break;
                        case 3 :
                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:64: STARTSYMBOLS ( symbol )*
                            {
                            STARTSYMBOLS21=(Token)input.LT(1);
                            match(input,STARTSYMBOLS,FOLLOW_STARTSYMBOLS_in_sdfGrammar403); 
                            STARTSYMBOLS21_tree = (CommonTree)adaptor.create(STARTSYMBOLS21);
                            root_0 = (CommonTree)adaptor.becomeRoot(STARTSYMBOLS21_tree, root_0);

                            // D:\\Documents\\Serge\\JavaProjects\\Unifier\\src\\unifier\\sdfparser\\Sdf.g:75:78: ( symbol )*
                            loop9:
                            do {
                                int alt9=2;
                                int LA9_0 = input.LA(1);

                                if ( (LA9_0==ID||(LA9_0>=STRING && LA9_0<=LPAREN)||LA9_0==LBRACE) ) {
                                    alt9=1;
                                }

